# failsol-detail

./: .gitignore  Cargo.toml
src/: main.rs
src/model/: mod.rs  signature_model.rs
src/routes/: signature.rs
src/services/: db.rs
src/utils/: constants.rs  mod.rs
src/utils/generate_image/: generate.rs  mod.rs  process_log_message.rs  upload_pinata.rs
