[package]
name = "failsol-detail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.25"
actix-files = "0.6.5"
actix-web = "4"
chrono = "0.4.37"
env_logger = "0.11.3"
futures-util = "0.3.30"
image = "0.25.1"
imageproc = "0.24.0"
mongodb = "2.8.2"
serde = "1.0.197"
solana-client = "1.18.10"
solana-sdk = "1.18.10"
solana-transaction-status = "1.18.10"
